GARPDev-salesforce/eclipse/GARPDev/src/objects/Exam_Sites__c.object
<CustomObject>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exam</label>
        <referenceTo>Exam__c</referenceTo>
        <relationshipName>Exam_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Exam_Attempts__c</fullName>
        <label>No of Exam Registrations</label>
        <summaryForeignKey>Exam_Attempt__c.Exam_Site__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Exam Sites</relationshipLabel>
        <relationshipName>Exam_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Exam Sites</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Exam__c</columns>
        <columns>Site__c</columns>
        <columns>Exam_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exam Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>